[project]
name = "unload-timer-comfyui"
description = "Frees VRAM memory when you are idle.  Like the way ollama works."
version = "1.0.0"
license = {text = "MIT License"}

[project.urls]
Repository = "https://github.com/niknah/unload-timer-comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "niknah"
DisplayName = "Unload VRAM timer"
Icon = "https://raw.githubusercontent.com/niknah/unload-timer-comfyui/refs/heads/main/UnloadTimer_Icon.webp"
